--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-  font-family: 'Source Sans Pro';
   outline: none;
   margin: 0;
   padding: 0;
@@ -64,7 +63,7 @@ input[type=range]::-ms-track {
   text-align: center;
 }
 
-.pd.table tbody td:hover {
+.pd.table tbody td.hoverable:hover {
   background-color: #FAFAFA;
 }
 
@@ -657,6 +656,156 @@ input[type=range]::-ms-track {
   background-color: #3c0af0;
 }
 
+.grid {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.grid:before,
+.grid:after,
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+
+.grid:after,
+.row:after {
+  clear: both;
+}
+
+[class*='col-'] {
+  width: 100%;
+  float: left;
+  min-height: 1px;
+}
+
+.col {
+  padding: 1em;
+  margin: 8px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+@media screen and (min-width: 320px) {
+  .col-wd-1 {
+    width: 8.33333%;
+  }
+  .col-wd-2 {
+    width: 16.66667%;
+  }
+  .col-wd-3 {
+    width: 25%;
+  }
+  .col-wd-4 {
+    width: 33.33333%;
+  }
+  .col-wd-5 {
+    width: 41.66667%;
+  }
+  .col-wd-6 {
+    width: 50%;
+  }
+  .col-wd-7 {
+    width: 58.33333%;
+  }
+  .col-wd-8 {
+    width: 66.66667%;
+  }
+  .col-wd-9 {
+    width: 75%;
+  }
+  .col-wd-10 {
+    width: 83.33333%;
+  }
+  .col-wd-11 {
+    width: 91.66667%;
+  }
+  .col-wd-12 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .col-md-1 {
+    width: 8.33333%;
+  }
+  .col-md-2 {
+    width: 16.66667%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33333%;
+  }
+  .col-md-5 {
+    width: 41.66667%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33333%;
+  }
+  .col-md-8 {
+    width: 66.66667%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33333%;
+  }
+  .col-md-11 {
+    width: 91.66667%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .col-sm-1 {
+    width: 8.33333%;
+  }
+  .col-sm-2 {
+    width: 16.66667%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33333%;
+  }
+  .col-sm-5 {
+    width: 41.66667%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33333%;
+  }
+  .col-sm-8 {
+    width: 66.66667%;
+  }
+  .col-sm-9 {
+    width: 75%;
+  }
+  .col-sm-10 {
+    width: 83.33333%;
+  }
+  .col-sm-11 {
+    width: 91.66667%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+
 .no-scrollbar {
   overflow-y: scroll;
   overflow: -moz-scrollbars-none;
@@ -706,6 +855,10 @@ input[type=range]::-ms-track {
 
 .text-warningYellow {
   color: #FFCC00;
+}
+
+.text-white {
+  color: #FFF;
 }
 
 @media only screen and (max-width: 576px) {
@@ -890,23 +1043,25 @@ input[type=range]::-ms-track {
 
 @-webkit-keyframes enlargeImage {
   1% {
-    max-width: 35%;
-    max-height: 30%;
+    width: 35%;
+    height: 30%;
   }
   100% {
-    max-width: 90%;
-    max-height: 80%;
+    max-width: 80%;
+    height: auto;
+    max-height: auto;
   }
 }
 
 @keyframes enlargeImage {
   1% {
-    max-width: 35%;
-    max-height: 30%;
+    width: 35%;
+    height: 30%;
   }
   100% {
-    max-width: 90%;
-    max-height: 80%;
+    max-width: 80%;
+    height: auto;
+    max-height: auto;
   }
 }
 
